feat: implement dynamic dashboard metrics with real-time updates
- Add MetricsService for data fetching\n- Update metrics component to use real-time data\n- Add recent approvals section\n- Add system alerts section\n- Add loading states and error handling\n- Update translations for new components

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -612,7 +612,20 @@
       "documentVerifications": "Document Verifications",
       "systemAlerts": "System Alerts",
       "verificationRate": "Verification Rate",
-      "vsLastMonth": "vs last month"
+      "vsLastMonth": "vs Last Month"
+    },
+    "recentApprovals": {
+      "title": "Recent Approvals",
+      "noApprovals": "No approvals yet"
+    },
+    "systemAlerts": {
+      "title": "System Alerts",
+      "noAlerts": "No active alerts",
+      "severity": {
+        "high": "High",
+        "medium": "Medium",
+        "low": "Low"
+      }
     },
     "manufacturers": {
       "list": {
