fix: resolve schema conflicts and type errors

--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -551,6 +551,10 @@
     "addProduct": {
       "title": "Yeni Ürün Ekle",
       "description": "Yeni bir ürün eklemek için formu doldurun",
+      "error": {
+        "title": "Hata",
+        "description": "Ürün eklenirken bir hata oluştu"
+      },
       "form": {
         "steps": {
           "manufacturer": "Üretici"
