fix: Resolve admin panel errors and remove manufacturers dependency

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -682,7 +682,8 @@
       "manufacturers": "Manufacturers",
       "documents": "Documents",
       "certifications": "Certifications",
-      "dppTemplates": "DPP Templates"
+      "dppTemplates": "DPP Templates",
+      "products": "Products"
     },
     "dpc": {
       "details": {
