--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -590,9 +590,9 @@
       "status": {
         "label": "Durum",
         "all": "Tüm Durumlar",
-        "active": "Aktif",
-        "pending": "Beklemede",
-        "draft": "Taslak"
+        "APPROVED": "Onaylandı",
+        "REJECTED": "Reddedildi",
+        "PENDING": "Beklemede"
       }
     },
     "list": {
@@ -614,6 +614,7 @@
       }
     },
     "actions": {
+      "openMenu": "Menüyü Aç",
       "menu": "İşlemler",
       "viewDetails": "Detayları Görüntüle",
       "editProduct": "Ürünü Düzenle",
@@ -623,7 +624,7 @@
       "download": "İndir"
     },
     "table": {
-      "name": "İsim",
+      "productName": "Ürün Adı",
       "model": "Model",
       "status": "Durum",
       "actions": "İşlemler"
